test: 불변리스트인 List.of 로 인자 변경